<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vtc.room.a101.mychatapplication.fragments.ChatFragment">

    <ImageView
        android:id="@+id/chat_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size"
        android:scaleType="fitStart"
        android:src="@drawable/elizabeth"
        android:contentDescription="@string/chat_image" />

    <TextView
        android:id="@+id/chat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/no_name_rec"
        android:fontFamily="cursive"
        android:textSize="@dimen/text_size"
        android:text="@string/elizabeth"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chat_image"
        >
    </android.support.v7.widget.RecyclerView>

    <EditText
        android:id="@+id/edit_text_send"
        android:layout_width="@dimen/image"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:inputType="text"
        android:hint="@string/input_message"
        />

    <ImageButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_send"
        android:layout_toEndOf="@+id/edit_text_send"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/send_button" />

</RelativeLayout>
