<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/elizabeth"
        android:scaleType="centerCrop"
        android:contentDescription="@string/full_screen_image_item" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/close_button"
        android:src="@drawable/ic_close"
        />

        <TextView
            android:id="@+id/neme_pager_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elizabeth"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/no_name_rec"
            android:textColor="@color/red_color"
            android:textSize="@dimen/text_size"
            android:fontFamily="cursive"
            />


    </RelativeLayout>

</FrameLayout>
