<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_from_all"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_view_background_color"

            >


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_image_item"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:src="@drawable/elizabeth" />

            <ImageButton
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_call"
                android:layout_marginTop="@dimen/size_from_top"
                android:layout_marginStart="@dimen/size_from_start"
                android:contentDescription="@string/call_button" />

            <TextView
                android:id="@+id/name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elizabeth"
                android:layout_toEndOf="@+id/circle_image_item"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_name_size"
                android:fontFamily="cursive"
                />

            <TextView
                android:id="@+id/status_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/name_item"
                android:layout_centerInParent="true"
                android:text="@string/in_search"
                android:textColor="@color/in_search_color"
                android:textSize="@dimen/text_size_last"
                android:layout_marginStart="@dimen/size_from_start"
                />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
